--- a/fun-with-for-loops/fun-with-for-loops.csproj
+++ b/fun-with-for-loops/fun-with-for-loops.csproj
@@ -1,9 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>critical_thinking_problems</RootNamespace>
+    <RootNamespace>fun_with_for_loops</RootNamespace>
   </PropertyGroup>
 
 </Project>
